[gd_scene load_steps=8 format=3 uid="uid://bk4hbrd23d4qx"]

[ext_resource type="Script" uid="uid://c4sv0sn5c54s2" path="res://scripts/proj_test.gd" id="1_l6ekr"]
[ext_resource type="PackedScene" uid="uid://b3j8u5c5t8iit" path="res://scenes/player.tscn" id="2_0e3rl"]
[ext_resource type="Texture2D" uid="uid://cmt7vgxoib7du" path="res://sprites/circle.png" id="3_l6ekr"]
[ext_resource type="PackedScene" uid="uid://bjs8v8m4mkf0i" path="res://scenes/missile.tscn" id="5_b5mkc"]
[ext_resource type="PackedScene" uid="uid://dok280bphjgw2" path="res://scenes/basic_enemy.tscn" id="6_exloi"]
[ext_resource type="PackedScene" uid="uid://il4a147i4nn3" path="res://scenes/companion.tscn" id="6_ipo53"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ipo53"]
radius = 19.2

[node name="ProjTest" type="Node2D"]
script = ExtResource("1_l6ekr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_0e3rl")]
unique_name_in_owner = true
z_index = 5
position = Vector2(-461, 160)
baseSpeed = 400.0

[node name="RangeDisplay" type="Sprite2D" parent="Player"]
self_modulate = Color(0.47451, 1, 0.490196, 0.192157)
z_index = -2
z_as_relative = false
texture = ExtResource("3_l6ekr")

[node name="Companion" parent="." instance=ExtResource("6_ipo53")]
unique_name_in_owner = true
position = Vector2(503, 52)
influenceStrength = 18000.0
redirectCoef = -0.3

[node name="CollisionShape2D" parent="Companion/ProjectileInfluencer" index="0"]
visible = false

[node name="InfluenceDisplay" type="Sprite2D" parent="Companion"]
self_modulate = Color(1, 0.105882, 1, 0.188235)
z_index = -10
scale = Vector2(3.125, 3.125)
texture = ExtResource("3_l6ekr")

[node name="InnerDisplay" type="Sprite2D" parent="Companion"]
self_modulate = Color(1, 1, 0.411765, 0.180392)
z_index = -9
scale = Vector2(0.78125, 0.78125)
texture = ExtResource("3_l6ekr")

[node name="Missile" parent="." groups=["PlayerDamaging"] instance=ExtResource("5_b5mkc")]
process_mode = 4
visible = false
target_velocity = 600.0
mass = 5.0

[node name="Sprite2D" type="Sprite2D" parent="Missile"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_l6ekr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Missile"]
shape = SubResource("CircleShape2D_ipo53")

[node name="BasicEnemy" parent="." instance=ExtResource("6_exloi")]
position = Vector2(459, -205)
attackCooldown = 2
moveCooldown = 2.0
moveSearchRange = 200.0
innerRange = 250.0
outerRange = 450.0
walkMoveSpeed = 140.0
acceleration = 250.0

[connection signal="influence_activate" from="Companion" to="." method="_on_player_influence_activate"]
[connection signal="influence_deactivate" from="Companion" to="." method="_on_player_influence_deactivate"]

[editable path="Companion"]
[editable path="Missile"]
